--- a/refs.bib
+++ b/refs.bib
@@ -103,3 +103,10 @@
 	pages        = {529--543},
 	doi          = {10.1109/71.932708}
 }
+@online{TracingAndVisualisation,
+	title        = {Tracing and Visualisation - Nextflow},
+	year         = 2021,
+	publisher    = {Nextflow},
+	url          = {https://www.nextflow.io/docs/latest/tracing.html#trace-report},
+	editor       = {{nextflow.io}}
+}
