--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -7,7 +7,7 @@
 \includegraphics[width=\linewidth]{fig/Logo_Header}
 \mbox{}\\[1pc]
 \begin{center}
-    \huge{ \bfseries Sizing Tasks for Scientific Workflows with Reinforcement Learning}\\[2pc]
+    \huge{ \bfseries Using Reinforcement Learning to Size Tasks for Scientific Workflows}\\[2pc]
 
     \Large{Nicolas Zunker}\\
     \large{n.zunker@campus.tu-berlin.de}\\[1pc]
