almost done with approach

--- a/thesis.tex
+++ b/thesis.tex
@@ -46,6 +46,10 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 \usepackage{csquotes}
 \usepackage{afterpage} % needed for empty page after front
 
+%Pseudocode
+%\usepackage[linesnumbered,german]{algorithm2e}
+\usepackage[linesnumbered,english]{algorithm2e}
+
 %%===================================
 % Custom definitions
     
