tidied up abstract, worked on intro section refs and names, fixed logo, wrote acknowledgements and added date

--- a/frontmatter/acknowledgment.tex
+++ b/frontmatter/acknowledgment.tex
@@ -6,7 +6,14 @@
 \addcontentsline{toc}{section}{Acknowledgment}
 \section*{Acknowledgment}
 
-I would like to thank the following persons for their great support when writing my thesis at the Mobile Cloud Computing Research Group (MCC) at Technische Universitaet Berlin.
+I would like to thank:
+
+Firstly, my advisor Jonathan for his helpful advice, constructive feedback and assistance.
+
+Then Prof. Dr. Toussaint, Prof. Dr. habil. Kao and Prof. Dr. Zubow, whose courses I enjoyed immensely and from whom I learned a lot.
+
+And finally my friends and family for their support.  
+
 
 \begin{flushright}
 NZ\\[1pc]
