--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -9,8 +9,8 @@ I hereby declare that I have created the present work independently and by my ow
 
 Hiermit erklaare ich, dass ich die vorliegende Arbeit selbststaandig und eigenhaandig sowie ohne unerlaubte fremde Hilfe und ausschliesslich unter Verwendung der aufgefaehrten Quellen und Hilfsmittel angefertigt habe.
 
-Die selbstaandige und eigenstaandige Anfertigung versichert an Eides statt:
+Die selbstaendige und eigenstaendige Anfertigung versichert an Eides statt:
 \begin{center}
-DATE\\[3pc]
+Berlin, den 30. November 2021\\[3pc]
 Nicolas Zunker
 \end{center}
