--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -11,10 +11,10 @@
 
     \Large{Nicolas Zunker}\\
     \large{n.zunker@campus.tu-berlin.de}\\[1pc]
-    \large{September 30, 2021}\\[2pc]
+    \large{November 30, 2021}\\[2pc]
 
     BACHELOR'S THESIS\\
-    Mobile Cloud Computing Chair\\
+    Adaptive Resource Management Chair\\
     Technische Universitaet Berlin
 \end{center}
 \vfill
