--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -6,13 +6,13 @@
 \addcontentsline{toc}{section}{Abstract}
 \section*{Abstract}
 
-The growth of computational power and big data has lead to a massive increase in demand for computing services by users who aim to process large datasets. Particularly in the natural sciences it has become common for scientists to break down their computing needs into a sequence of smaller tasks, a so called workflow. These workflows can then be run on a variety of different execution platforms, depending on the users need.  One of the most pertinent fields for this is Bioinformatics.
+The growth of computational power and big data has led to a massive increase in demand for computing services by users who aim to process large datasets. Particularly in the natural sciences it has become common for scientists to break down their computing needs into a sequence of smaller tasks, a so called workflow. These workflows can then be run on a variety of different execution platforms, depending on the users needs.  One of the most pertinent fields for this is Bioinformatics.
 
-Since workflows are composed of segregated inter-dependent tasks which can run in their own containers, the individual tasks which make up a workflow can be assigned a fraction of the computational resources available to the entire execution platform and doing so intelligently can make the entire process more efficient. This is naturally of particular interest to the users of these workflows since it will either lower their costs or speed up the entire workflow or both. 
+Since workflows are composed of segregated inter-dependent tasks which can run in their own containers, the individual tasks which make up a workflow can be assigned a fraction of the computational resources available to the entire execution platform and doing so intelligently could improve efficiency and performance.
 
-This thesis aims to investigate the allocation of resources to individual tasks and specifically how reinforcement learning can be applied to improve the allocation to be as optimal as possible. The implementation will be integrated into source code  of the popular scientific workflow management system nextflow and tested against common bioinformatic workflows. Two different reinforcement learning approaches (Gradient Bandits and Q-Learning) will be compared and their performance will be judged against both eachother as well as the default configuration of resources.
+This thesis aims to investigate the allocation of resources to individual tasks, and specifically how reinforcement learning can be applied to aid in choosing more efficien allocations. The implementation of a reinforcement learning solution will be integrated into source code  of the popular scientific workflow management system nextflow and tested against common bioinformatic workflows. Two different reinforcement learning approaches (Gradient Bandits and Q-Learning) will be compared and their performance will be judged both against eachother and against the performance of the task's default resource configurations.
 
-Should such an approach prove useful and provide an improvement in resource usage it would naturally indicate this is an area which should be explored further and that the use of these methods can improve scientific workflows. This would be helpful to both the scientists which use workflow managers as well as the administrators of the execution platforms on which the workflows are run.
+Should such an approach prove fruitful and provide an improvement in resource usage efficiency it would naturally indicate this is an area which should be explored further and that the use of these methods can improve the performance of scientific workflows. This would be helpful to both the scientists which use workflow managers as well as the ownders and administrators of the execution platforms on which they run.
 
 
 %\newpage
